# allnet-android

./: README.md  build.gradle  local.properties
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/alnet/allnet_android/: ExampleInstrumentedTest.kt
app/src/androidTest/java/com/coutocode/allnet_android/: ExampleInstrumentedTest.kt
app/src/androidTest/java/com/coutocode/allnet_xchat/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cfiles/: astart.c
app/src/main/cfiles/gui/allnetui/: Contact.java  ContactConfigPanel.java  ContactType.java  ContactsPanel.java  CoreAPI.java  CoreConnect.java  CoreDebug.java  KeyExchangePanel.java  MorePanel.java  SocketUtils.java  UIAPI.java  UITester.java
app/src/main/cfiles/gui/utils/: ApplicationFrame.java  BijectiveList.java  ContactButtonPanel.java  ControllerInterface.java  HtmlLabel.java  MessageBubble.java  MyFrame.java  RenamePanel.java  ScrollPaneResizeAdapter.java  StatusPanel.java  TextValidator.java  WordWrapper.java
app/src/main/cfiles/gui/utils/tabbedpane/: MyTabbedPane.java
app/src/main/cfiles/lib/: crypt_sel.h  packet.h  util.h  wp_arith.h
app/src/main/cfiles/xchat/: gui_respond.c
app/src/main/cpp/: astart.c  native-lib.cpp
app/src/main/cpp/gui/allnetui/: ContactComparator.java  ContactData.java  Conversation.java  ConversationPanel.java  Message.java  NewContactPanel.java  UI.java  UIController.java
app/src/main/cpp/gui/utils/: CheckBoxPanel.java  ComboBoxPanel.java  RoundedBorder.java
app/src/main/cpp/gui/utils/tabbedpane/: SimpleButton.java
app/src/main/cpp/lib/: keys.h
app/src/main/java/com/coutocode/allnet_android/: ContactActivity.kt  NetworkAPI.kt
app/src/main/java/com/coutocode/allnet_xchat/: ContactListActivity.kt
app/src/main/java/org/alnet/allnet_android/: ContactActivity.kt  ContactAdapter.kt  Extensions.kt  KeyExchangeActivity.kt  NetworkAPI.kt  TabBarActivity.kt
app/src/main/java/org/alnet/allnet_android/activities/: GroupsActivity.kt  KeyExchangeActivity.kt  MessageActivity.kt  SettingsActivity.kt  TabBarActivity.kt
app/src/main/java/org/alnet/allnet_android/adapters/: ContactAdapter.kt  ContactIncompleteAdapter.kt  GroupAdapter.kt  MessageAdapter.kt
app/src/main/java/org/alnet/allnet_android/fragments/: ContactListFragment.kt  ContactNewFragment.kt  MoreFragment.kt
app/src/main/java/org/alnet/allnet_android/model/: ContactModel.kt  MessageModel.kt
app/src/main/java/org/alnet/allnetandroid/: Extensions.kt  NetworkAPI.kt
app/src/main/java/org/alnet/allnetandroid/activities/: GroupsActivity.kt  KeyExchangeActivity.kt  MessageActivity.kt  SettingsActivity.kt  TabBarActivity.kt
app/src/main/java/org/alnet/allnetandroid/adapters/: ContactAdapter.kt  ContactIncompleteAdapter.kt  GroupAdapter.kt  MessageAdapter.kt
app/src/main/java/org/alnet/allnetandroid/fragments/: ContactListFragment.kt  ContactNewFragment.kt  MoreFragment.kt
app/src/main/java/org/alnet/allnetandroid/model/: ContactModel.kt  MessageModel.kt
app/src/main/native/: CHelper.c  XChat.c  android_xchat.c  android_xchat.h
app/src/main/res/drawable/: msg_missing.xml  msg_received_background.xml  msg_sent_acked_background.xml  msg_sent_background.xml  notification_rounded.xml
app/src/main/res/layout/: activity_contact.xml  activity_contact_list.xml  activity_groups.xml  activity_key_exchange.xml  activity_message.xml  activity_settings.xml  activity_tab_bar.xml  contact_incomplete_item.xml  contact_item.xml  fragment_contact_list.xml  fragment_contact_new.xml  fragment_more.xml  group_item.xml  item_header_hidden.xml  message_item_missing.xml  message_item_received.xml  message_item_send.xml  message_item_sent_acked.xml
app/src/main/res/menu/: menu_contacts.xml  menu_key_exchange.xml  menu_settings.xml  navigation.xml
app/src/main/res/values/: colors.xml  strings.xml
app/src/test/java/com/alnet/allnet_android/: ExampleUnitTest.kt
app/src/test/java/com/coutocode/allnet_android/: ExampleUnitTest.kt
app/src/test/java/com/coutocode/allnet_xchat/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
